--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 .header{
     width: 100%;
     height: 50vh;
-    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("images/background2.JPEG");
+    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("./images/background2.jpeg");
     background-position: center; 
     background-size:cover;
     box-sizing: border-box;
